# stellar-mobile-first-multisig-signer

./: .gitignore  Cargo.toml  README.md  justfile  rustfmt.toml
.cargo/: config.toml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/multisig/vaultsigner/: AppConfig.kt  MainActivity.kt  SecureStore.kt  VaultViewModel.kt
android/app/src/main/java/com/multisig/vaultsigner/ui/: VaultScreen.kt
contracts/: Cargo.toml  README.md
contracts/factory/: Cargo.toml
contracts/factory/src/: lib.rs  test.rs
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs
contracts/vault/: Cargo.toml
contracts/vault/src/: lib.rs  test.rs
crates/stellar-core/: Cargo.toml
crates/stellar-core/src/: keypair.rs  lib.rs  network.rs  prepare.rs  rpc.rs  scval.rs  submit.rs
crates/vault-client/: Cargo.toml
crates/vault-client/src/: config.rs  factory.rs  lib.rs  read.rs  tx.rs  types.rs  write.rs
crates/vault-signer-cli/: Cargo.toml
crates/vault-signer-cli/src/: main.rs
crates/vault-signer-ffi/: Cargo.toml
crates/vault-signer-ffi/src/: api.rs  error.rs  lib.rs  runtime.rs  types.rs
deploy/: .gitignore
ios/: README.md  project.yml
ios/VaultSigner/: AppConfig.swift  AppTheme.swift  ContentView.swift  CreateVaultView.swift  Info.plist  KeychainStore.swift  MainTabView.swift  SettingsView.swift  VaultDashboardView.swift  VaultLoader.swift  VaultSigner-Bridging-Header.h  VaultSignerApp.swift  VaultViewModel.swift
scripts/: android-setup.sh  build-android-lib.sh  build-ios-lib.sh  deploy-testnet.sh  e2e-testnet.sh  generate-bindings.sh  ios-setup.sh
