[workspace]
resolver = "2"
members = [
    "crates/stellar-core",
    "crates/vault-client",
    "crates/vault-signer-cli",
    "crates/vault-signer-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
stellar-xdr = "25.0.0"
stellar-strkey = { version = "0.0.16", features = ["serde-decoded"] }
stellar-baselib = "0.5.5"
soroban-client = "0.5.4"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive", "env"] }
bip39 = "2.0.0"
slip10_ed25519 = "0.1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uniffi = "0.29.3"
thiserror = "2"
