[package]
name = "vault-client"
description = "Soroban multisig vault contract client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
stellar-core = { path = "../stellar-core" }
stellar-xdr.workspace = true
stellar-strkey.workspace = true
soroban-client.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
